--- a/ios/devapp3/Info.plist
+++ b/ios/devapp3/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,26 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Montserrat-Black.ttf</string>
+		<string>Montserrat-BlackItalic.ttf</string>
+		<string>Montserrat-ExtraBold.ttf</string>
+		<string>Montserrat-ExtraLight.ttf</string>
+		<string>Montserrat-Light.ttf</string>
+		<string>Montserrat-Medium.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-SemiBold.ttf</string>
+		<string>Montserrat-Thin.ttf</string>
+		<string>SmoochSans-Black.ttf</string>
+		<string>SmoochSans-Bold.ttf</string>
+		<string>SmoochSans-ExtraBold.ttf</string>
+		<string>SmoochSans-ExtraLight.ttf</string>
+		<string>SmoochSans-Light.ttf</string>
+		<string>SmoochSans-Medium.ttf</string>
+		<string>SmoochSans-Regular.ttf</string>
+		<string>SmoochSans-SemiBold.ttf</string>
+		<string>SmoochSans-Thin.ttf</string>
+	</array>
 </dict>
 </plist>
