--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.67.3",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
+    "react-native-toast-message": "^2.1.3",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
