--- a/ios/devapp3/Info.plist
+++ b/ios/devapp3/Info.plist
@@ -71,6 +71,7 @@
 		<string>SmoochSans-Regular.ttf</string>
 		<string>SmoochSans-SemiBold.ttf</string>
 		<string>SmoochSans-Thin.ttf</string>
+		<string>Ionicons.ttf</string>
 	</array>
 </dict>
 </plist>
