--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.5.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-toast-message": "^2.1.3",
